dtor/tests/errors/dtor_unknown.stderr
error: Unexpected meta attribute: 'unknown'
       ...expected one of:
       anonymous; crate_path = $path : pat;
       ctor(export_name_prefix = $ctor_export_name_prefix_str : literal);
       ctor(link_section = $ctor_link_section_name : literal); export_name_prefix =
       $export_name_prefix_str : literal; link_section = $section : literal; method =
       $method_id : ident; unsafe; used(linker);
 --> tests/errors/dtor_unknown.rs:3:1
  |
3 | #[dtor(unknown)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unexpected meta attribute: 'unknown'
       ...expected one of:
       anonymous; crate_path = $path : pat;
       ctor(export_name_prefix = $ctor_export_name_prefix_str : literal);
       ctor(link_section = $ctor_link_section_name : literal); export_name_prefix =
       $export_name_prefix_str : literal; link_section = $section : literal; method =
       $method_id : ident; unsafe; used(linker);
 --> tests/errors/dtor_unknown.rs:7:1
  |
7 | #[dtor(unsafe, unknown, unknown2)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::__extract_meta` which comes from the expansion of the attribute macro `dtor` (in Nightly builds, run with -Z macro-backtrace for more info)
